used the margine 0 auto to fix the align item issue

--- a/week02/styles/temple.css
+++ b/week02/styles/temple.css
@@ -1,92 +1,92 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
-    min-height: 100vh;
-    display: block;
-    justify-content: center;
+    max-width: 100%;
     text-align: center;
-    padding: 20x;
 }
 
-header { 
-    background-color: rgb(59, 59, 59);
+
+header {
+    
+    background-color: black;
     color: white;
-    text-align: center;
-    padding: 0.5em;
-    overflow: hidden;
-    font-size: 1.5em;
+    font-size: 2em;
+    padding: 1rem 0rem;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-
 }
 
+:root {
+    
+}
 
 main {
-   margin-top: 50px;
-    padding: 20px;
-   overflow: hidden;
+    height: var(--main-height);
+    max-width: 800px;
+    margin: 0  auto;
     text-align: center;
+    padding: 10px;
+    overflow: hidden;
+    display: block;
+    margin-top: 3.5em;
+    
+    
+
+
 }
 
 main h1 {
-    font-size: 2.8rem;
-    padding: 10px;
-    text-align: center;
+    font-size: 45px;
+    padding: 1rem 0rem 0rem 0rem;
 }
 
-main picture  img  {
-    width: 500px;
-    height: auto;
-    overflow: hidden;
-    box-shadow: 0 0 30px rgb(121, 6, 6);
-    margin: 10px;
-}
 
+
+main picture img {
+    width: 60%;
+    margin: 1rem;
+    box-shadow: 0 0 30px green;
+}
 
 main section {
-    background-color: rgb(211, 211, 211);
+    width: 470px;
+    padding: 1rem;
+    margin: 0 auto;
+    background-color: rgb(211, 207, 207);
     color: black;
     text-align: left;
-   margin: 10px 387px;
-   height: 200px;
-
+    border-bottom:  1em solid white;
 }
 
 main section h2 {
-    padding: 20px 10px 10px 10px;
     border-bottom: 1px solid black;
-    margin: 0px 15px;
+    padding: 0rem 0rem 1rem;
+
 }
 
 
 main section p {
-max-width: 70%;
-font-size: 17px;
-margin-left: 20px;
-padding: 10px;
-
+    max-width: 350px;
+    padding: 1em;
+    line-height: 1.5rem;
 }
 
-main section ul {
-    max-width: 70%;
-    font-size: 17px;
-    margin-left: 26px;
-    padding: 10px;
+main section ul  {
+    max-width: 350px;
+    padding: 1.5em;
+    line-height: 1.5rem;
 }
 
 footer {
-    color: white;
     background-color: black;
-    padding: 1rem 0rem;
-    
+    padding: 1em 0;
+    color: white;
+    font-size: 1.5em;
 }
-
